--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             <nav>
                 <ul>
                     <li><a href="#bio">Bio</a></li>
-                    <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8"><i class="fab fa-2x fa-linkedin"></i> Linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8">Linkedin</a></li>
                     <li>
-                        <a href="mailto:rajbhatia21.21@gmail.com"><i class="fab fa-2x fa fa-envelope"></i> Mail</a>
+                        <a href="mailto:rajbhatia21.21@gmail.com"> Mail</a>
                     </li>
-                    <li><a href="https://github.com/BhatiaRaj"><i class="fab fa-2x fa-github"></i> GitHub</a></li>
-                    <li><a href="#"><i class="fab fa-2x ai ai-cv-square"></i> Resume</a></li>
+                    <li><a href="https://github.com/BhatiaRaj">GitHub</a></li>
+                    <li><a href="#">Resume</a></li>
                 </ul>
             </nav>
         </header>
