--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
+
+    <!-- generics -->
+    <link rel="icon" type="img/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="img/png" href="/favicon-128x128.png" sizes="128x128">
+    <link rel="icon" type="img/png" href="/favicon-192x192.png" sizes="192x192">
+
+    <!-- Android -->
+    <link rel="shortcut icon" type="img/png" href="/favicon-196x196.png" sizes="196x196">
+
+    <!-- iOS -->
+    <link rel="apple-touch-icon" type="img/png" href="/favicon-152x152.png" sizes="152x152">
+    <link rel="apple-touch-icon" type="img/png" href="/favicon-167x167.png" sizes="167x167">
+    <link rel="apple-touch-icon" type="img/png" href="/favicon-120x120.png" sizes="120x120">
+    <link rel="apple-touch-icon" type="img/png" href="/favicon-180x180.png" sizes="180x180">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body class="is-preload" data-new-gr-c-s-check-loaded="14.1043.0" data-gr-ext-installed="">
