--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <a href="mailto:rajbhatia21.21@gmail.com"> Mail</a>
                     </li>
                     <li><a href="https://github.com/BhatiaRaj">GitHub</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="https://drive.google.com/file/d/1MhWEYrd2TNnyu7rbsqvBO6xEhHScMsP6/view?usp=sharing">Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -90,8 +90,8 @@
             <article id="bio" class="" style="display: none;">
                 <h2 class="major">Bio</h2>
                 <!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
-                <p style=" text-align: justify;">Hello 👋 <br>My Self Raj Bhatia. I am a student of Computer Science Engineering (CSE) at Devang Patel Institute of Advance Technology and Research - DEPSTAR (Charusat).<br> I have completed my diploma in computer engineering with 8.75 CGPA
-                    from S.B.Polyechnic -KJIT,Savli.
+                <p style=" text-align: justify;">Hello 👋 <br>My Self Raj Bhatia. I am a student of Computer Science Engineering (CSE) at Devang Patel Institute of Advance Technology and Research - DEPSTAR (Charusat).<br> Seeking a beginner role to enhance and explore my technical knowledge
+                    and problem solving skills. And also have experience as a web developer. Consistently trying new technologies. Not limiting myself to one domain, open to learn new things.
                 </p>
                 <div class="close">Close</div>
             </article>
