--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="content">
                 <div class="inner">
-                    <h1>Hi, I'm Raj Bhatia</h1>
+                    <h1>Hi,<br>I'm Raj Bhatia</h1>
                     <div id="slider">
                         <ul>
                             <li>
