--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <!-- Header -->
         <header id="header" style>
             <div class="logo">
-                <span class="fa fa-laptop"></span>
+                <!-- <span class="fa fa-laptop"></span> -->
+                <img src="image/01.png" alt="Logo" style="height: 120px; width: 110px;">
             </div>
             <div class="content">
                 <div class="inner">
@@ -77,8 +78,9 @@
                     <li><a href="#bio">Bio</a></li>
                     <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8">Linkedin</a></li>
                     <li>
-                        <a href="mailto:rajbhatia21.21@gmail.com"> Mail</a>
+                        <a href="mailto:rajbhatia21.21@gmail.com">Mail</a>
                     </li>
+                    <li><a href="#Project">Project</a></li>
                     <li><a href="https://github.com/BhatiaRaj">GitHub</a></li>
                     <li><a href="https://drive.google.com/file/d/1MhWEYrd2TNnyu7rbsqvBO6xEhHScMsP6/view?usp=sharing">Resume</a></li>
                 </ul>
@@ -89,9 +91,20 @@
             <!-- Bio -->
             <article id="bio" class="" style="display: none;">
                 <h2 class="major">Bio</h2>
-                <!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
                 <p style=" text-align: justify;">Hello 👋 <br>My Self Raj Bhatia. I am a student of Computer Science Engineering (CSE) at Devang Patel Institute of Advance Technology and Research - DEPSTAR (Charusat).<br> Seeking a beginner role to enhance and explore my technical knowledge
                     and problem solving skills. And also have experience as a web developer. Consistently trying new technologies. Not limiting myself to one domain, open to learn new things.
+                </p>
+                <div class="close">Close</div>
+            </article>
+            <article id="Project" class="" style="display: none;">
+                <h2 class="major">Project</h2>
+                <h3 class="major"> > Task Tracker</h3>
+                <p style=" text-align: justify; text-size-adjust: 12;">
+                    Task Tracker is a web portal it will help the company to keep a track of each task of each employee.<br>Platform:<br>Front end: HTML, CSS, Bootstrap, JavaScript <br>Back end: .NET, C#, MySQL
+                </p>
+                <h3 class="major"> > OTP GENERATION AND VERIFY</h3>
+                <p style=" text-align: justify;">
+                    OTP Verification is the process of verifying a user by sending a unique password so that the user can be verified before completing a registration or payment process.<br> Language : Python
                 </p>
                 <div class="close">Close</div>
             </article>
