--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <!-- Header -->
         <header id="header" style>
             <div class="logo">
-                <!-- <span class="fa fa-laptop"></span> -->
-                <img src="image/01.png" alt="Logo" style="height: 120px; width: 110px;">
+                <span class="fa fa-code"></span>
             </div>
             <div class="content">
                 <div class="inner">
