--- a/index.html
+++ b/index.html
@@ -101,9 +101,17 @@
                 <p style=" text-align: justify; text-size-adjust: 12;">
                     Task Tracker is a web portal it will help the company to keep a track of each task of each employee.<br>Platform:<br>Front end: HTML, CSS, Bootstrap, JavaScript <br>Back end: .NET, C#, MySQL
                 </p>
-                <h3 class="major"> > OTP GENERATION AND VERIFY</h3>
+                <h3 class="major"> > OTP Generation and Verify</h3>
                 <p style=" text-align: justify;">
                     OTP Verification is the process of verifying a user by sending a unique password so that the user can be verified before completing a registration or payment process.<br> Language : Python
+                </p>
+                <h3 class="major"> > Python Mini Projects</h3>
+                <h5 class="major"> - Drink Water Notification Reminder</h5>
+                <p style="text-align: justify;">
+                    It is desktop notification.<br> Modue Use : time & plyer</p>
+                <h5 class="major"> - GST Calculator</h5>
+                <p style="text-align: justify;">
+                    Build a GST Calculator using Python with Tkinter GUI
                 </p>
                 <div class="close">Close</div>
             </article>
