--- a/index.html
+++ b/index.html
@@ -75,12 +75,10 @@
             <nav>
                 <ul>
                     <li><a href="#bio">Bio</a></li>
-                    <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8">Linkedin</a></li>
-                    <li>
-                        <a href="mailto:rajbhatia21.21@gmail.com">Mail</a>
-                    </li>
                     <li><a href="#Project">Project</a></li>
                     <li><a href="https://github.com/BhatiaRaj">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8">Linkedin</a></li>
+                    <li><a href="mailto:rajbhatia21.21@gmail.com">Mail</a></li>
                     <li><a href="https://drive.google.com/file/d/1sh4FE0PP9z5kZCFlFTvf0BlWVaW94wRn/view?usp=sharing">Resume</a></li>
                 </ul>
             </nav>
@@ -97,15 +95,15 @@
             </article>
             <article id="Project" class="" style="display: none;">
                 <h2 class="major">Project</h2>
-                <h3 class="major"> > Task Tracker</h3>
+                <h3 class="major"><a href="https://github.com/BhatiaRaj/TaskTracker">Task Tracker</a></h3>
                 <p style=" text-align: justify; text-size-adjust: 12;">
                     Task Tracker is a web portal it will help the company to keep a track of each task of each employee.<br>Platform:<br>Front end: HTML, CSS, Bootstrap, JavaScript <br>Back end: .NET, C#, MySQL
                 </p>
-                <h3 class="major"> > OTP Generation and Verify</h3>
+                <h3 class="major"><a href="https://github.com/BhatiaRaj/OTP_Generation_and_Verify">OTP Generation and Verify</a></h3>
                 <p style=" text-align: justify;">
                     OTP Verification is the process of verifying a user by sending a unique password so that the user can be verified before completing a registration or payment process.<br> Language : Python
                 </p>
-                <h3 class="major"> > Python Mini Projects</h3>
+                <h3 class="major"> <a href="https://github.com/BhatiaRaj/Python_Mini_Projects">Python Mini Projects</a></h3>
                 <h5 class="major"> - Drink Water Notification Reminder</h5>
                 <p style="text-align: justify;">
                     It is desktop notification.<br> Modue Use : time & plyer</p>
