--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Raj Bhatia Portfolio</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/academicons.min.css">
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css" />
+    </noscript>
     <meta name="robots" content="index, follow" />
 
     <meta name="google-site-verification" content="Wc0LBPIulWoND-g-Na5SJVGLbVB0pwep_zrYM4zVUCM" />
@@ -17,9 +19,9 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 
     <!-- generics -->
-    <link rel="icon" type="img/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="img/png" href="/favicon-128x128.png" sizes="128x128">
-    <link rel="icon" type="img/png" href="/favicon-192x192.png" sizes="192x192">
+    <link rel="icon" type="img/png" href="image/01.png" sizes="32x32">
+    <link rel="icon" type="img/png" href="image/01.png" sizes="128x128">
+    <link rel="icon" type="img/png" href="image/01.png" sizes="192x192">
 
     <!-- Android -->
     <link rel="shortcut icon" type="img/png" href="/favicon-196x196.png" sizes="196x196">
@@ -44,6 +46,7 @@
             <div class="content">
                 <div class="inner">
                     <h1>Hi,<br>I'm Raj Bhatia</h1>
+                    <!-- Slider  -->
                     <div id="slider">
                         <!-- <ul>
                             <li>
@@ -54,7 +57,7 @@
 
                             <li>
                                 <div class="slider-container">
-                                    <p>C/C++</p>
+                                    <p>C / C++</p>
                                 </div>
                             </li>
                             <li>
@@ -67,7 +70,6 @@
                                     <p>SQL / MySQL</p>
                                 </div>
                             </li>
-
                         </ul> -->
                     </div>
                 </div>
@@ -79,7 +81,10 @@
                     <li><a href="https://github.com/BhatiaRaj">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8">Linkedin</a></li>
                     <li><a href="mailto:rajbhatia21.21@gmail.com">Mail</a></li>
-                    <li><a href="https://drive.google.com/file/d/1sh4FE0PP9z5kZCFlFTvf0BlWVaW94wRn/view?usp=sharing">Resume</a></li>
+                    <li><a
+                            href="https://drive.google.com/file/d/1sh4FE0PP9z5kZCFlFTvf0BlWVaW94wRn/view?usp=sharing">Resume</a>
+                    </li>
+
                 </ul>
             </nav>
         </header>
@@ -88,22 +93,30 @@
             <!-- Bio -->
             <article id="bio" class="" style="display: none;">
                 <h2 class="major">Bio</h2>
-                <p style=" text-align: justify;">Hello 👋 <br>My Self Raj Bhatia. I am a student of Computer Science Engineering (CSE) at Devang Patel Institute of Advance Technology and Research - DEPSTAR (Charusat).<br>Seeking a beginner role to enhance and explore my technical knowledge
-                    and problem solving skills. And also have experience as a web developer. Consistently trying new technologies. Not limiting myself to one domain, open to learn new things.
+                <p style=" text-align: justify;">Hello 👋 <br>My Self Raj Bhatia. I am a student of Computer Science
+                    Engineering (CSE) at Devang Patel Institute of Advance Technology and Research - DEPSTAR
+                    (Charusat).<br>Seeking a beginner role to enhance and explore my technical knowledge
+                    and problem solving skills. And also have experience as a web developer. Consistently trying new
+                    technologies. Not limiting myself to one domain, open to learn new things.
                 </p>
                 <div class="close">Close</div>
             </article>
+
             <article id="Project" class="" style="display: none;">
                 <h2 class="major">Project</h2>
                 <h3 class="major"><a href="https://github.com/BhatiaRaj/TaskTracker">Task Tracker</a></h3>
                 <p style=" text-align: justify; text-size-adjust: 12;">
-                    Task Tracker is a web portal it will help the company to keep a track of each task of each employee.<br>Platform:<br>Front end: HTML, CSS, Bootstrap, JavaScript <br>Back end: .NET, C#, MySQL
+                    Task Tracker is a web portal it will help the company to keep a track of each task of each
+                    employee.<br>Platform:<br>Front end: HTML, CSS, Bootstrap, JavaScript <br>Back end: .NET, C#, MySQL
                 </p>
-                <h3 class="major"><a href="https://github.com/BhatiaRaj/OTP_Generation_and_Verify">OTP Generation and Verify</a></h3>
+                <h3 class="major"><a href="https://github.com/BhatiaRaj/OTP_Generation_and_Verify">OTP Generation and
+                        Verify</a></h3>
                 <p style=" text-align: justify;">
-                    OTP Verification is the process of verifying a user by sending a unique password so that the user can be verified before completing a registration or payment process.<br> Language : Python
+                    OTP Verification is the process of verifying a user by sending a unique password so that the user
+                    can be verified before completing a registration or payment process.<br> Language : Python
                 </p>
-                <h3 class="major"> <a href="https://github.com/BhatiaRaj/Python_Mini_Projects">Python Mini Projects</a></h3>
+                <h3 class="major"> <a href="https://github.com/BhatiaRaj/Python_Mini_Projects">Python Mini Projects</a>
+                </h3>
                 <h5 class="major"> - Drink Water Notification Reminder</h5>
                 <p style="text-align: justify;">
                     It is desktop notification.<br> Modue Use : time & plyer</p>
@@ -120,8 +133,6 @@
             </nav>
         </div>
     </div>
-
-
 
     <!-- Scripts -->
     <script type="text/javascript" async="" src="js/analytics.js"></script>
