--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 </head>
 
 <body class="is-preload" data-new-gr-c-s-check-loaded="14.1043.0" data-gr-ext-installed="">
-    <div id="bg"></div>
+    <div id="bg">
+    </div>
     <!-- Wrapper -->
     <div id="wrapper">
         <!-- Header -->
@@ -46,6 +47,8 @@
             <div class="content">
                 <div class="inner">
                     <h1>Hi,<br>I'm Raj Bhatia</h1>
+                    <h3>Developer</h3>
+                    <h5>Consistently trying new Technologies. No limit to one domain, open to learn new things.</h5>
                     <!-- Slider  -->
                     <div id="slider">
                         <!-- <ul>
@@ -78,11 +81,10 @@
                 <ul>
                     <li><a href="#bio">Bio</a></li>
                     <li><a href="#Project">Project</a></li>
-                    <li><a href="https://github.com/BhatiaRaj">GitHub</a></li>
-                    <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8">Linkedin</a></li>
-                    <li><a href="mailto:rajbhatia21.21@gmail.com">Mail</a></li>
-                    <li><a
-                            href="https://drive.google.com/file/d/1sh4FE0PP9z5kZCFlFTvf0BlWVaW94wRn/view?usp=sharing">Resume</a>
+                    <li><a href="https://github.com/BhatiaRaj" target="_blank">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8" target="_blank">Linkedin</a></li>
+                    <li><a href="mailto:rajbhatia21.21@gmail.com"target="_blank">Mail</a></li>
+                    <li><a href="https://drive.google.com/file/d/1sh4FE0PP9z5kZCFlFTvf0BlWVaW94wRn/view?usp=sharing" target="_blank">Resume</a>
                     </li>
 
                 </ul>
@@ -93,11 +95,16 @@
             <!-- Bio -->
             <article id="bio" class="" style="display: none;">
                 <h2 class="major">Bio</h2>
-                <p style=" text-align: justify;">Hello 👋 <br>My Self Raj Bhatia. I am a student of Computer Science
-                    Engineering (CSE) at Devang Patel Institute of Advance Technology and Research - DEPSTAR
-                    (Charusat).<br>Seeking a beginner role to enhance and explore my technical knowledge
-                    and problem solving skills. And also have experience as a web developer. Consistently trying new
-                    technologies. Not limiting myself to one domain, open to learn new things.
+                <p style=" text-align: justify;">Hello 👋 <br>My Self Raj Bhatia. I am a diploma pass-out student from Gujarat Technology University, with 8.75 CGPA.
+                </p>
+                <p>
+                    Currently, I am a B.Tech student of Computer Science Engineering (CSE) at Charotar University of Science and Technology  (Charusat) - DEPSTAR.
+                </p>
+                <p>
+                    Previously, I worked as an Intern at <a href="http://jagrutiinfosoft.in/"target="_blank"> Jagruti Infosoft </a> with Abhishek Galfade, focusing on the development, testing of web data, and designing data collection systems.
+                </p>
+                <p>
+                    I have worked on digital marketing at <a href="www.elemanceindia.in" target="_blank">Elemancindia</a>. I have created a digital poster for their social media handle. Elemanceindia is a startup company of my friend.
                 </p>
                 <div class="close">Close</div>
             </article>
