--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="inner">
                     <h1>Hi,<br>I'm Raj Bhatia</h1>
                     <h3>Developer</h3>
-                    <h5>Consistently trying new Technologies. No limit to one domain, open to learn new things.</h5>
+                    <p>Consistently trying new Technologies. No limit to one domain, open to learn new things.</p>
                     <!-- Slider  -->
                     <div id="slider">
                         <!-- <ul>
