--- a/index.html
+++ b/index.html
@@ -49,32 +49,6 @@
                     <h1>Hi,<br>I'm Raj Bhatia</h1>
                     <h3>Developer</h3>
                     <p>Consistently trying new Technologies. No limit to one domain, open to learn new things.</p>
-                    <!-- Slider  -->
-                    <div id="slider">
-                        <!-- <ul>
-                            <li>
-                                <div class="slider-container">
-                                    <p>HTML5, CSS, Javascript</p>
-                                </div>
-                            </li>
-
-                            <li>
-                                <div class="slider-container">
-                                    <p>C / C++</p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="slider-container">
-                                    <p>Python</p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="slider-container">
-                                    <p>SQL / MySQL</p>
-                                </div>
-                            </li>
-                        </ul> -->
-                    </div>
                 </div>
             </div>
             <nav>
@@ -83,9 +57,11 @@
                     <li><a href="#Project">Project</a></li>
                     <li><a href="https://github.com/BhatiaRaj" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8" target="_blank">Linkedin</a></li>
-                    <li><a href="mailto:rajbhatia21.21@gmail.com"target="_blank">Mail</a></li>
-                    <li><a href="https://drive.google.com/file/d/1sh4FE0PP9z5kZCFlFTvf0BlWVaW94wRn/view?usp=sharing" target="_blank">Resume</a>
+                    <li><a href="mailto:rajbhatia21.21@gmail.com" target="_blank">Mail</a></li>
+                    <li><a href="https://drive.google.com/file/d/1sh4FE0PP9z5kZCFlFTvf0BlWVaW94wRn/view?usp=sharing"
+                            target="_blank">Resume</a>
                     </li>
+                    <li><a href="#contact">Contact</a></li>
 
                 </ul>
             </nav>
@@ -95,17 +71,31 @@
             <!-- Bio -->
             <article id="bio" class="" style="display: none;">
                 <h2 class="major">Bio</h2>
-                <p style=" text-align: justify;">Hello 👋 <br>My Self Raj Bhatia. I am a diploma pass-out student from Gujarat Technology University, with 8.75 CGPA.
+                <p style=" text-align: justify;">Hello 👋 <br>My Self Raj Bhatia. I am a diploma pass-out student from
+                    Gujarat Technology University, with 8.75 CGPA.
                 </p>
                 <p>
-                    Currently, I am a B.Tech student of Computer Science Engineering (CSE) at Charotar University of Science and Technology  (Charusat) - DEPSTAR.
+                    Currently, I am a B.Tech student of Computer Science Engineering (CSE) at Charotar University of
+                    Science and Technology (Charusat) - DEPSTAR.
                 </p>
                 <p>
-                    Previously, I worked as an Intern at <a href="http://jagrutiinfosoft.in/"target="_blank"> Jagruti Infosoft </a> with Abhishek Galfade, focusing on the development, testing of web data, and designing data collection systems.
+                    Previously, I worked as an Intern at <a href="http://jagrutiinfosoft.in/" target="_blank"> Jagruti
+                        Infosoft </a> with Abhishek Galfade, focusing on the development, testing of web data, and
+                    designing data collection systems.
                 </p>
                 <p>
-                    I have worked on digital marketing at <a href="www.elemanceindia.in" target="_blank">Elemancindia</a>. I have created a digital poster for their social media handle. Elemanceindia is a startup company of my friend.
+                    I have worked on digital marketing at <a href="www.elemanceindia.in"
+                        target="_blank">Elemancindia</a>. I have created a digital poster for their social media handle.
+                    Elemanceindia is a startup company of my friend.
                 </p>
+                <div class="close">Close</div>
+            </article>
+
+            <article id="contact" class="" style="display: none;">
+                <h2 class="major">Contact</h2>
+                <div>
+
+                </div>
                 <div class="close">Close</div>
             </article>
 
@@ -116,6 +106,18 @@
                     Task Tracker is a web portal it will help the company to keep a track of each task of each
                     employee.<br>Platform:<br>Front end: HTML, CSS, Bootstrap, JavaScript <br>Back end: .NET, C#, MySQL
                 </p>
+
+
+                <h3 class="major"><a href="#">Auction House</a></h3>
+                <p style=" text-align: justify;">
+                    Auction House is a web application developed using Python and its framework Django. An auction is a
+                    process of buying and selling goods or services by offering them up for bid, taking bids, and then
+                    selling the item to the highest bidder.
+                    <br>Platform:<br>Front end: HTML, CSS, Bootstrap, JavaScript
+                    <br>Back end: Python, Django
+                </p>
+
+
                 <h3 class="major"><a href="https://github.com/BhatiaRaj/OTP_Generation_and_Verify">OTP Generation and
                         Verify</a></h3>
                 <p style=" text-align: justify;">
@@ -133,11 +135,6 @@
                 </p>
                 <div class="close">Close</div>
             </article>
-        </div>
-
-        <div class="social-network-section">
-            <nav>
-            </nav>
         </div>
     </div>
 
