--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li><a href="https://drive.google.com/file/d/1sh4FE0PP9z5kZCFlFTvf0BlWVaW94wRn/view?usp=sharing"
                             target="_blank">Resume</a>
                     </li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="tel:+916351151381">Contact</a></li>
 
                 </ul>
             </nav>
