--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                         target="_blank">Elemancindia</a>. I have created a digital poster for their social media handle.
                     Elemanceindia is a startup company of my friend.
                 </p>
+                 <p>
+                    I have worked on Live Project at <a href="https://www.gcsteq.com/"
+                        target="_blank">GCS</a>.
+                </p>
                 <div class="close">Close</div>
             </article>
 
