--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <!-- Bio -->
             <article id="bio" class="" style="display: none;">
                 <h2 class="major">Bio</h2>
-                <p style=" text-align: justify;">Hello 👋 <br>My Self Raj Bhatia. I am a diploma pass-out student from
+<!--                 <p style=" text-align: justify;">Hello 👋 <br>My Self Raj Bhatia. I am a diploma pass-out student from
                     Gujarat Technology University, with 8.75 CGPA.
                 </p>
                 <p>
@@ -90,7 +90,15 @@
                 </p>
                  <p>
                     I have worked on Live Project at <a href="https://www.gcsteq.com/"
-                        target="_blank">GCS</a>.
+                        target="_blank">GCS</a>. -->
+                <p style=" text-align: justify;">
+                    As a computer science student, I am motivated by a love of technology and a desire to understand how our digital world works. I am prepared to tackle a wide range of projects and problem-solving challenges thanks to a solid foundation in programming languages such as Java, Python, and C++.
+
+I've gained experience in areas such as software development, artificial intelligence, and data analysis throughout my academic career. I've also had the opportunity to work on a number of projects that have allowed me to put my knowledge to use in a practical setting.
+
+Aside from my technical abilities, I am also an excellent collaborator and communicator. I recognise the value of working well with others to achieve a common goal, and I am always eager to share my knowledge and skills with my colleagues.
+
+I am excited to explore new areas of computer science and contribute to the advancement of technology as I continue to grow and develop my skills. I am eager to work in a dynamic and challenging environment where I can continue to learn and grow as a computer person.
                 </p>
                 <div class="close">Close</div>
             </article>
