--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <li><a href="https://github.com/BhatiaRaj" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8" target="_blank">Linkedin</a></li>
                     <li><a href="mailto:rajbhatia21.21@gmail.com" target="_blank">Mail</a></li>
-                    <li><a href="https://drive.google.com/file/d/1sh4FE0PP9z5kZCFlFTvf0BlWVaW94wRn/view?usp=sharing"
+                    <li><a href="https://drive.google.com/file/d/1PjURS_bTmvHeAvnIWFuwamKXndJ20ukQ/view?usp=share_link"
                             target="_blank">Resume</a>
                     </li>
                     <li><a href="tel:+916351151381">Contact</a></li>
