--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <!-- Bio -->
             <article id="bio" class="" style="display: none;">
                 <h2 class="major">Bio</h2>
-<!--                 <p style=" text-align: justify;">Hello 👋 <br>My Self Raj Bhatia. I am a diploma pass-out student from
+                <!--                 <p style=" text-align: justify;">Hello 👋 <br>My Self Raj Bhatia. I am a diploma pass-out student from
                     Gujarat Technology University, with 8.75 CGPA.
                 </p>
                 <p>
@@ -92,7 +92,17 @@
                     I have worked on Live Project at <a href="https://www.gcsteq.com/"
                         target="_blank">GCS</a>. -->
                 <p style=" text-align: justify;">Hello 👋 <br>
-                    As a computer science student, I am motivated by a love of technology and a desire to understand how our digital world works. I am prepared to tackle a wide range of projects and problem-solving challenges thanks to a solid foundation in programming languages such as Java, Python, and C++. I've gained experience in areas such as software development, artificial intelligence, and data analysis throughout my academic career. I've also had the opportunity to work on a number of projects that have allowed me to put my knowledge to use in a practical setting. Aside from my technical abilities, I am also an excellent collaborator and communicator. I recognise the value of working well with others to achieve a common goal, and I am always eager to share my knowledge and skills with my colleagues. I am excited to explore new areas of computer science and contribute to the advancement of technology as I continue to grow and develop my skills. I am eager to work in a dynamic and challenging environment where I can continue to learn and grow as a computer person.
+                    As a computer science student, I am motivated by a love of technology and a desire to understand how
+                    our digital world works. I am prepared to tackle a wide range of projects and problem-solving
+                    challenges thanks to a solid foundation in programming languages such as Java, Python, and C++. I've
+                    gained experience in areas such as software development, artificial intelligence, and data analysis
+                    throughout my academic career. I've also had the opportunity to work on a number of projects that
+                    have allowed me to put my knowledge to use in a practical setting. Aside from my technical
+                    abilities, I am also an excellent collaborator and communicator. I recognise the value of working
+                    well with others to achieve a common goal, and I am always eager to share my knowledge and skills
+                    with my colleagues. I am excited to explore new areas of computer science and contribute to the
+                    advancement of technology as I continue to grow and develop my skills. I am eager to work in a
+                    dynamic and challenging environment where I can continue to learn and grow as a computer person.
                 </p>
                 <div class="close">Close</div>
             </article>
@@ -109,10 +119,49 @@
                 <h2 class="major">Project</h2>
                 <h3 class="major"><a href="https://github.com/BhatiaRaj/TaskTracker">Task Tracker</a></h3>
                 <p style=" text-align: justify; text-size-adjust: 12;">
-                    Task Tracker is a web portal it will help the company to keep a track of each task of each
-                    employee.<br>Platform:<br>Front end: HTML, CSS, Bootstrap, JavaScript <br>Back end: .NET, C#, MySQL
+                    A Task Tracker website built using .NET and C# with MySQL as the database is a web-based application
+                    that allows managers or supervisors to assign tasks to employees and track their progress. This
+                    website enables team members to stay organized and helps increase productivity.
+                    <br>
+                    With a Task Tracker website, managers or supervisors can create and assign tasks to specific
+                    employees or teams, set due dates, and add descriptions or attachments to provide detailed
+                    instructions. Employees can access the website to view their assigned tasks, mark them as complete,
+                    and leave comments or notes for their manager or supervisor.
+                    <br>
+                    The website can also include features such as real-time notifications, status updates, and a
+                    dashboard that displays the progress of each task and provides an overview of the team's
+                    performance.
+                    <br>
+                    As the website is built using .NET and C# with MySQL as the database, it is a secure and reliable
+                    solution for tracking tasks and managing teams. The use of modern web technologies ensures that the
+                    website is fast, responsive, and user-friendly. Additionally, the database provides a scalable and
+                    efficient storage solution for managing tasks and team data.
+
+
+
+                    <br>Platform:<br>Front end: HTML, CSS, Bootstrap, JavaScript <br>Back end: .NET, C#, MySQL
                 </p>
 
+                <h3 class="major"><a href="#">Car-Pooling</a></h3>
+                <p style=" text-align: justify;">
+                    Car-Pooling is a web-based application developed using .NET Core MVC and C#. It aims to
+                    revolutionize the way people commute by providing a convenient and eco-friendly solution for sharing
+                    rides. With Car-Pooling, users can connect with each other to share rides, reducing traffic
+                    congestion, fuel consumption, and carbon emissions.
+                    <br>
+                    The application features a user-friendly interface that allows users to create profiles, search for
+                    available rides, and request to join or offer rides based on their preferences and schedules.
+                    Car-Pooling provides a secure and reliable platform for users to connect and communicate, ensuring
+                    trust and transparency among participants.
+                    <br>
+                    The application utilizes advanced algorithms to optimize routes and match users with compatible
+                    travel companions, maximizing the efficiency of each trip. Users can also rate and review each
+                    other, promoting accountability and fostering a community of responsible carpoolers.
+                    <br>
+                    Car-Pooling promotes sustainable transportation options, cost-sharing, and social connections,
+                    making commuting easier, more affordable, and environmentally friendly.
+                    <br>Platform:<br>Front end: HTML, CSS, Bootstrap, JavaScript <br>Back end: .NET Core, C#, Ms SQL Server
+                </p>
 
                 <h3 class="major"><a href="#">Auction House</a></h3>
                 <p style=" text-align: justify;">
@@ -130,15 +179,7 @@
                     OTP Verification is the process of verifying a user by sending a unique password so that the user
                     can be verified before completing a registration or payment process.<br> Language : Python
                 </p>
-                <h3 class="major"> <a href="https://github.com/BhatiaRaj/Python_Mini_Projects">Python Mini Projects</a>
-                </h3>
-                <h5 class="major"> - Drink Water Notification Reminder</h5>
-                <p style="text-align: justify;">
-                    It is desktop notification.<br> Modue Use : time & plyer</p>
-                <h5 class="major"> - GST Calculator</h5>
-                <p style="text-align: justify;">
-                    Build a GST Calculator using Python with Tkinter GUI
-                </p>
+
                 <div class="close">Close</div>
             </article>
         </div>
