--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li><a href="https://drive.google.com/file/d/1PjURS_bTmvHeAvnIWFuwamKXndJ20ukQ/view?usp=sharing"
                             target="_blank">Resume</a>
                     </li>
-                    <!-- <li><a href="tel:+91 6351151381">Contact</a></li> -->
+                    <li><a href="tel:+91 6351151381">Contact</a></li>
 
                 </ul>
             </nav>
