--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <ul>
                     <li><a href="#bio">Bio</a></li>
                     <li><a href="#Project">Project</a></li>
+                    <li><a href="#Experience">Experience</a></li>
                     <li><a href="https://github.com/BhatiaRaj" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8" target="_blank">Linkedin</a></li>
                     <li><a href="mailto:rajbhatia21.21@gmail.com" target="_blank">Mail</a></li>
