--- a/index.html
+++ b/index.html
@@ -108,13 +108,35 @@
                 <div class="close">Close</div>
             </article>
 
-            <article id="contact" class="" style="display: none;">
-                <h2 class="major">Contact</h2>
-                <div>
+            <article id="Experience" class="" style="display: none;">
+                <h2 class="major">Experience</h2>
 
-                </div>
+                <ol>
+                    <li>
+                        <b>Full Stack Developer</b><br>
+                        L&T Technology Services · Internship<br>
+                        May 2023 - Jun 2023 · 2 mos
+                    </li><br>
+                    <li>
+                        <b> Live Project (Bug Fixing)</b><br>
+                        GCS - GuruGrace Consultancy Service · Internship
+                        <br>Dec 2020 - Jan 2022 · 2 mos
+                    </li><br>
+                    <li>
+                        <b> Digital Marketing</b><br>
+                        Elemanceindia · Internship
+                        <br>Dec 2020 - Jan 2021 · 2 mos
+                    </li><br>
+                    <li>
+                        <b> Web Developer</b><br>
+                        Jagruti Infosoft · Internship
+                        <br>Dec 2020 - Jan 2021 · 2 mos
+                    </li>
+                </ol>
+
                 <div class="close">Close</div>
             </article>
+
 
             <article id="Project" class="" style="display: none;">
                 <h2 class="major">Project</h2>
@@ -161,7 +183,8 @@
                     <br>
                     Car-Pooling promotes sustainable transportation options, cost-sharing, and social connections,
                     making commuting easier, more affordable, and environmentally friendly.
-                    <br>Platform:<br>Front end: HTML, CSS, Bootstrap, JavaScript <br>Back end: .NET Core, C#, Ms SQL Server
+                    <br>Platform:<br>Front end: HTML, CSS, Bootstrap, JavaScript <br>Back end: .NET Core, C#, Ms SQL
+                    Server
                 </p>
 
                 <h3 class="major"><a href="#">Auction House</a></h3>
