--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                     <li><a href="#bio">Bio</a></li>
                     <li><a href="#Project">Project</a></li>
                     <li><a href="#Experience">Experience</a></li>
+                    <!-- <li><a href="#Skill">Skills</a></li> -->
                     <li><a href="https://github.com/BhatiaRaj" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8" target="_blank">Linkedin</a></li>
                     <li><a href="mailto:rajbhatia21.21@gmail.com" target="_blank">Mail</a></li>
@@ -136,7 +137,11 @@
 
                 <div class="close">Close</div>
             </article>
-
+            <!-- Skills -->
+            <!-- <article id="Skills" class="" style="display: none;">
+                <h2 class="major">Skills</h2>
+                <div class="close">Close</div>
+            </article> -->
 
             <article id="Project" class="" style="display: none;">
                 <h2 class="major">Project</h2>
