--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="inner">
                     <h1>Hi,<br>I'm Raj Bhatia</h1>
                     <h3>Developer</h3>
-                    <p>Consistently trying new Technologies. No limit to one domain, open to learn new things.</p>
+                    <p>Consistently trying new Technologies.<br> No limit to one domain, open to learn new things.</p>
                 </div>
             </div>
             <nav>
@@ -56,11 +56,12 @@
                     <li><a href="#bio">Bio</a></li>
                     <li><a href="#Project">Project</a></li>
                     <li><a href="#Experience">Experience</a></li>
-                    <!-- <li><a href="#Skill">Skills</a></li> -->
+                    <!-- <li><a href="#Skills">Skills</a></li> -->
+                    <!-- <li><a href="#About">About</a></li> -->
                     <li><a href="https://github.com/BhatiaRaj" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8" target="_blank">Linkedin</a></li>
                     <li><a href="mailto:rajbhatia21.21@gmail.com" target="_blank">Mail</a></li>
-                    <li><a href="https://drive.google.com/file/d/1PjURS_bTmvHeAvnIWFuwamKXndJ20ukQ/view?usp=sharing"
+                    <li><a href="https://drive.google.com/file/d/1PjURS_bTmvHeAvnIWFuwamKXndJ20ukQ/view?usp=sharing" 
                             target="_blank">Resume</a>
                     </li>
                     <li><a href="tel:+91 6351151381">Contact</a></li>
@@ -138,10 +139,16 @@
                 <div class="close">Close</div>
             </article>
             <!-- Skills -->
-            <!-- <article id="Skills" class="" style="display: none;">
+            <article id="Skills" class="" style="display: none;">
                 <h2 class="major">Skills</h2>
                 <div class="close">Close</div>
-            </article> -->
+            </article>
+
+            <!-- About -->
+            <article id="About" class="" style="display: none;">
+                <h2 class="major">About</h2>
+                <div class="close">Close</div>
+            </article>
 
             <article id="Project" class="" style="display: none;">
                 <h2 class="major">Project</h2>
