--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <link rel="icon" type="img/png" href="image/01.png" sizes="128x128">
     <link rel="icon" type="img/png" href="image/01.png" sizes="192x192">
 
+    <!-- Bootstrap CSS -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> -->
+    
+
     <!-- Android -->
     <link rel="shortcut icon" type="img/png" href="/favicon-196x196.png" sizes="196x196">
 
@@ -56,12 +60,12 @@
                     <li><a href="#bio">Bio</a></li>
                     <li><a href="#Project">Project</a></li>
                     <li><a href="#Experience">Experience</a></li>
-                    <!-- <li><a href="#Skills">Skills</a></li> -->
+                    <li><a href="#Skills">Skills</a></li>
                     <!-- <li><a href="#About">About</a></li> -->
                     <li><a href="https://github.com/BhatiaRaj" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8" target="_blank">Linkedin</a></li>
                     <li><a href="mailto:rajbhatia21.21@gmail.com" target="_blank">Mail</a></li>
-                    <li><a href="https://drive.google.com/file/d/1PjURS_bTmvHeAvnIWFuwamKXndJ20ukQ/view?usp=sharing" 
+                    <li><a href="https://drive.google.com/file/d/1PjURS_bTmvHeAvnIWFuwamKXndJ20ukQ/view?usp=sharing"
                             target="_blank">Resume</a>
                     </li>
                     <li><a href="tel:+91 6351151381">Contact</a></li>
@@ -95,24 +99,26 @@
                     I have worked on Live Project at <a href="https://www.gcsteq.com/"
                         target="_blank">GCS</a>. -->
                 <p style=" text-align: justify;">Hello 👋 <br>
+                <p>
                     As a computer science student, I am motivated by a love of technology and a desire to understand how
                     our digital world works. I am prepared to tackle a wide range of projects and problem-solving
-                    challenges thanks to a solid foundation in programming languages such as Java, Python, and C++. I've
-                    gained experience in areas such as software development, artificial intelligence, and data analysis
+                    challenges thanks to a solid foundation in programming languages such as Java, Python, and C++. </p>
+                <p>I've gained experience in areas such as software development, artificial intelligence, and data
+                    analysis
                     throughout my academic career. I've also had the opportunity to work on a number of projects that
-                    have allowed me to put my knowledge to use in a practical setting. Aside from my technical
+                    have allowed me to put my knowledge to use in a practical setting.</p>
+                <p>Aside from my technical
                     abilities, I am also an excellent collaborator and communicator. I recognise the value of working
                     well with others to achieve a common goal, and I am always eager to share my knowledge and skills
-                    with my colleagues. I am excited to explore new areas of computer science and contribute to the
+                    with my colleagues.</p>
+                <p>I am excited to explore new areas of computer science and contribute to the
                     advancement of technology as I continue to grow and develop my skills. I am eager to work in a
-                    dynamic and challenging environment where I can continue to learn and grow as a computer person.
+                    dynamic and challenging environment where I can continue to learn and grow as a computer person.</p>
                 </p>
                 <div class="close">Close</div>
             </article>
-
             <article id="Experience" class="" style="display: none;">
                 <h2 class="major">Experience</h2>
-
                 <ol>
                     <li>
                         <b>Full Stack Developer</b><br>
@@ -141,12 +147,32 @@
             <!-- Skills -->
             <article id="Skills" class="" style="display: none;">
                 <h2 class="major">Skills</h2>
+                <!-- <p>HTML</p>
+                <p>CSS</p>
+                <p>JS</p>
+                <p>.NET</p>
+                <p>C#</p>
+                <p>Python</p>
+                <p>DBMS</p>
+                <p>Graphi Design</p> -->
+
                 <div class="close">Close</div>
             </article>
 
             <!-- About -->
             <article id="About" class="" style="display: none;">
                 <h2 class="major">About</h2>
+                <!-- <p>
+                <ul>
+                 <li><a href="https://github.com/BhatiaRaj" target="_blank">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8" target="_blank">Linkedin</a></li>
+                    <li><a href="mailto:rajbhatia21.21@gmail.com" target="_blank">Mail</a></li>
+                    <li><a href="https://drive.google.com/file/d/1PjURS_bTmvHeAvnIWFuwamKXndJ20ukQ/view?usp=sharing"
+                            target="_blank">Resume</a>
+                    </li>
+                    <li><a href="tel:+91 6351151381">Contact : +91 6351151381</a></li>
+                    <li><a>Contact : Vadodara, Gujarat</a></li>
+                </ul></p> -->
                 <div class="close">Close</div>
             </article>
 
