--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <li><a href="#bio">Bio</a></li>
                     <li><a href="#Project">Project</a></li>
                     <li><a href="#Experience">Experience</a></li>
-                    <li><a href="#Skills">Skills</a></li>
+                    <!-- <li><a href="#Skills">Skills</a></li> -->
                     <!-- <li><a href="#About">About</a></li> -->
                     <li><a href="https://github.com/BhatiaRaj" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/raj-bhatia-1790901a8" target="_blank">Linkedin</a></li>
