--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- Bootstrap CSS -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> -->
-    
+
 
     <!-- Android -->
     <link rel="shortcut icon" type="img/png" href="/favicon-196x196.png" sizes="196x196">
@@ -123,7 +123,8 @@
                     <li>
                         <b>Full Stack Developer</b><br>
                         L&T Technology Services · Internship<br>
-                        May 2023 - Jun 2023 · 2 mos
+                        May 2023 - Jun 2023 · 2 mos<br>
+                        <!-- <p></p> -->
                     </li><br>
                     <li>
                         <b> Live Project (Bug Fixing)</b><br>
@@ -133,7 +134,11 @@
                     <li>
                         <b> Digital Marketing</b><br>
                         Elemanceindia · Internship
-                        <br>Dec 2020 - Jan 2021 · 2 mos
+                        <br>Dec 2020 - Jan 2021 · 2 mos<br>
+                        <!-- <p>I recently had the opportunity to create a captivating digital poster for Elemanceindia, a
+                            startup company. The poster was designed specifically for their social media handle as part
+                            of a digital marketing project. I focused on capturing the essence of Elemanceindia's vision
+                            while incorporating visually appealing elements to engage the online audience.</p> -->
                     </li><br>
                     <li>
                         <b> Web Developer</b><br>
